[SCB-2687]fix test cases fail: jaxrs query parameter collection format
